samples/_failures_safe/1761627529_12559a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7b349d95.c: In function ‘main’:
./samples/SAFE/__tmp_7b349d95.c:131:87: error: expected ‘)’ at end of input
  131 |         printf("Average magnitude of valid transformations: %.4f\n", average_magnitude
      |               ~                                                                       ^
      |                                                                                       )
./samples/SAFE/__tmp_7b349d95.c:131:9: error: expected declaration or statement at end of input
  131 |         printf("Average magnitude of valid transformations: %.4f\n", average_magnitude
      |         ^~~~~~
./samples/SAFE/__tmp_7b349d95.c:131:9: error: expected declaration or statement at end of input
